# HC-TTIExp

./: .gitignore  CMakeLists.txt  README.md  config.json  config.py  config_guide.md
Monte_Carlo/: montecarlosimulation.py  permeability.py  permeabilitysimulation.py
Static_Model/: montecarlo.py  montecarlosimulation.py  permeability.py  permeabilitysimulation.py
cmake/: HCTTIExpProjConfig.cmake.in  HCTTIExpProjConfig.h.in
doc/: Doxyfile
doc/docbook/: _e_j_e_m_p_l_o1_8cpp.xml  _e_j_e_m_p_l_o1_8cpp__incl.dot  _e_j_e_m_p_l_o2_8cpp.xml  annotated.xml  class_your_namespace_1_1_your_class.xml  class_your_namespace_1_1_your_class_a58c138805b17b10a6c2a51d0725b8316_icgraph.dot  dir_0d9a86413da4c85b0ab6657597eb4c1b.xml  dir_38cd9eca440b760dc966f21b1f8d8f41.xml  dir_4010362a5c05bb412ccb9e05dad6738e.xml  dir_68267d1309a1af8e8297ef4c3efbcdba.xml  dir_b00de47ad7e2e13a637d9aa605dec95e.xml  dir_d63ef1312b52f5fbe5f9c76689f7e06a.xml  dir_d73d1ee04cc237a5854777ea99c55872.xml  errorhandling_8cpp.xml  fluidproperties_8cpp.xml  fluidproperties_8cpp__incl.dot  index.xml  logger_8cpp.xml  logger_8cpp__incl.dot  mediaproperties_8cpp.xml  mediaproperties_8cpp__incl.dot  message_8cpp.xml  namespace_h_c_t_t_i_e_x_p.xml  namespace_your_namespace.xml  readwrite_8cpp.xml  simulation_8cpp.xml  struct_layer_properties.xml  struct_litho_data.xml  struct_your_namespace_1_1_layer_properties.xml  tti_8cpp.xml  visualization_8cpp.xml  visualization_8cpp__incl.dot
doc/html/: _e_j_e_m_p_l_o1_8cpp.html  _e_j_e_m_p_l_o1_8cpp_source.html  _e_j_e_m_p_l_o2_8cpp.html  _e_j_e_m_p_l_o2_8cpp_source.html  annotated.html  class_your_namespace_1_1_your_class-members.html  class_your_namespace_1_1_your_class.html  class_your_namespace_1_1_your_class_ae31510f7e63d8e588b6b68eb1202bcb1_cgraph.dot  classes.html  dir_0d9a86413da4c85b0ab6657597eb4c1b.html  dir_38cd9eca440b760dc966f21b1f8d8f41.html  dir_4010362a5c05bb412ccb9e05dad6738e.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_b00de47ad7e2e13a637d9aa605dec95e.html  dir_d63ef1312b52f5fbe5f9c76689f7e06a.html  dir_d73d1ee04cc237a5854777ea99c55872.html  errorhandling_8cpp.html  errorhandling_8cpp_source.html  files.html  fluidproperties_8cpp.html  fluidproperties_8cpp_source.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  graph_legend.html  index.html  logger_8cpp.html  logger_8cpp_source.html  mediaproperties_8cpp.html  mediaproperties_8cpp_source.html  message_8cpp.html  message_8cpp_source.html  namespace_h_c_t_t_i_e_x_p.html  namespace_your_namespace.html  namespaces.html  readwrite_8cpp.html  readwrite_8cpp__incl.dot  readwrite_8cpp_source.html  (+13 more)
doc/latex/: _e_j_e_m_p_l_o1_8cpp.tex  _e_j_e_m_p_l_o1_8cpp.tex.tmp  _e_j_e_m_p_l_o1_8cpp__incl.dot  _e_j_e_m_p_l_o2_8cpp.tex  _e_j_e_m_p_l_o2_8cpp__incl.dot  annotated.tex  class_your_namespace_1_1_your_class.tex  class_your_namespace_1_1_your_class_a58c138805b17b10a6c2a51d0725b8316_icgraph.dot  class_your_namespace_1_1_your_class_ae31510f7e63d8e588b6b68eb1202bcb1_cgraph.dot  dir_0d9a86413da4c85b0ab6657597eb4c1b.tex  dir_38cd9eca440b760dc966f21b1f8d8f41.tex  dir_4010362a5c05bb412ccb9e05dad6738e.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_b00de47ad7e2e13a637d9aa605dec95e.tex  dir_d63ef1312b52f5fbe5f9c76689f7e06a.tex  dir_d73d1ee04cc237a5854777ea99c55872.tex  errorhandling_8cpp.tex  errorhandling_8cpp__incl.dot  files.tex  fluidproperties_8cpp.tex  fluidproperties_8cpp__incl.dot  logger_8cpp.tex  logger_8cpp__incl.dot  mediaproperties_8cpp.tex  mediaproperties_8cpp__incl.dot  message_8cpp.tex  message_8cpp__incl.dot  namespace_h_c_t_t_i_e_x_p.tex  namespace_your_namespace.tex  namespaces.tex  readwrite_8cpp.tex  readwrite_8cpp__incl.dot  refman.tex  simulation_8cpp.tex  struct_layer_properties.tex  struct_litho_data.tex  struct_your_namespace_1_1_layer_properties.tex  tti_8cpp.tex  tti_8cpp__incl.dot  visualization_8cpp.tex  (+1 more)
doc/rtf/: _e_j_e_m_p_l_o2_8cpp__incl.dot  dir_0d9a86413da4c85b0ab6657597eb4c1b.rtf  dir_38cd9eca440b760dc966f21b1f8d8f41.rtf  dir_4010362a5c05bb412ccb9e05dad6738e.rtf  dir_68267d1309a1af8e8297ef4c3efbcdba.rtf  dir_b00de47ad7e2e13a637d9aa605dec95e.rtf  dir_d63ef1312b52f5fbe5f9c76689f7e06a.rtf  dir_d73d1ee04cc237a5854777ea99c55872.rtf  errorhandling_8cpp__incl.dot  message_8cpp__incl.dot  refman.rtf
doc/xml/: _e_j_e_m_p_l_o1_8cpp.xml  _e_j_e_m_p_l_o2_8cpp.xml  class_your_namespace_1_1_your_class.xml  dir_0d9a86413da4c85b0ab6657597eb4c1b.xml  dir_38cd9eca440b760dc966f21b1f8d8f41.xml  dir_4010362a5c05bb412ccb9e05dad6738e.xml  dir_68267d1309a1af8e8297ef4c3efbcdba.xml  dir_b00de47ad7e2e13a637d9aa605dec95e.xml  dir_d63ef1312b52f5fbe5f9c76689f7e06a.xml  dir_d73d1ee04cc237a5854777ea99c55872.xml  errorhandling_8cpp.xml  fluidproperties_8cpp.xml  index.xml  logger_8cpp.xml  mediaproperties_8cpp.xml  message_8cpp.xml  namespace_h_c_t_t_i_e_x_p.xml  namespace_your_namespace.xml  readwrite_8cpp.xml  simulation_8cpp.xml  struct_layer_properties.xml  struct_litho_data.xml  struct_your_namespace_1_1_layer_properties.xml  tti_8cpp.xml  visualization_8cpp.xml
include/basic/: errorhandling.h  logger.h  message.h  readwrite.h
include/fluid_properties/: fluidproperties.h
include/media_properties/: mediaproperties.h
include/thermal_effects/: tti.h
include/visualization/: visualization.h
mains/: CMakeLists.txt  geometry.vtk  hcttiexp.cpp
mains/data/: layerinfo.txt  litho_properties.txt  litho_properties_2.txt  mod_CORTE_NS.vtu
mains/results/: CORTE_NS_40_50.vtu  CORTE_NS_50_60.vtu  CORTE_NS_60_70.vtu  TTI_CORTE_NS_40_50.vtu  TTI_CORTE_NS_50_60.vtu  TTI_CORTE_NS_60_70.vtu  (+1 more)
src/basic/: CMakeLists.txt  errorhandling.cpp  logger.cpp  message.cpp  readwrite.cpp
src/fluid_properties/: CMakeLists.txt  fluidproperties.cpp
src/media_properties/: CMakeLists.txt  EJEMPLO1.cpp  EJEMPLO2.cpp  mediaproperties.cpp
src/thermal_effects/: CMakeLists.txt  tti.cpp
tests/: CMakeLists.txt  test-hello.cpp  test-readkinetic.cpp  test-readlitho.cpp  test-version.cpp
tests/test_data/: kinetic_properties.txt  litho_properties.txt
utils/: foldermanagement.py
(+1015 files in other folders)
